# FastPhylo

./: CMakeLists.txt  INSTALL  README  README.md
src/c++/: CMakeLists.txt  CMakeLists2.txt  DistanceMatrix.cpp  DistanceMatrix.hpp  DistanceRow.hpp  Exception.hpp  FloatDistanceMatrix.cpp  FloatDistanceMatrix.hpp  InitAndPrintOn_utils.cpp  InitAndPrintOn_utils.hpp  Makefile.fromIsaac  Newick.hpp  Object.cpp  Object.hpp  Sequence.cpp  Sequence.hpp  SequenceTree.cpp  SequenceTree.hpp  Simulator.hpp  Tree_impl.hpp  arg_utils.c  arg_utils.h  arg_utils_ext.cpp  arg_utils_ext.hpp  build_zlib.sh  fileFormatSchema.hpp  file_utils.cpp  file_utils.hpp  license-win32-statically-built  log_utils.hpp  optimize_flags.py  std_c_utils.c  std_c_utils.h  stl_utils.cpp  stl_utils.hpp  xml_output_global.cpp
src/c++/DNA_b128/: DNA_b128_String.cpp  DNA_b128_String.hpp  Sequences2DistanceMatrix.cpp  Sequences2DistanceMatrix.hpp  computeDistance_DNA_b128_String.cpp  computeTAMURANEIDistance_DNA_b128_String.cpp  sse2_wrapper.c
src/c++/aml/: AML_LeafLifting.cpp  AML_LeafLifting.hpp  AML_SpanningTree.cpp  AML_SpanningTree.hpp  AML_given_edge_probabilities.cpp  AML_given_edge_probabilities.hpp  AML_star.cpp  Big_AML.cpp  Big_AML.hpp
src/c++/code_tests/: ParsimonyTest.cpp  dm_test_file.txt  sse2_wrapper_test.c
src/c++/distance_methods/: LeastSquaresFit.cpp  LeastSquaresFit.hpp  NeighborJoining.cpp  NeighborJoining.hpp
src/c++/generating_block_transfer_data/: Makefile
src/c++/iterative_tree_merger/: iterative_merge.cpp
src/c++/programs/: RF_dist.cpp  Tamir2Phylip.cpp  buildtree.cpp  drawtree.cpp  naivedist.cpp
src/c++/programs/fastdist/: BinaryDmOutputStream.cpp  BinaryDmOutputStream.hpp  DataInputStream.hpp  DataOutputStream.cpp  DataOutputStream.hpp  FastaInputStream.cpp  FastaInputStream.hpp  PhylipDmOutputStream.cpp  PhylipMaInputStream.cpp  PhylipMaInputStream.hpp  XmlInputStream.cpp  XmlInputStream.hpp  XmlOutputStream.cpp  XmlOutputStream.hpp  fastdist.cpp  main.cpp
src/c++/programs/fastprot/: DataOutputStream.cpp  DataOutputStream.hpp  ExpectedDistance.cpp  ExpectedDistance.hpp  FastaInputStream.cpp  Matrix.hpp  MaximumLikelihood.hpp  ModelMatrix.cpp  ModelMatrix.hpp  PhylipMaInputStream.hpp  ProtDistCalc.cpp  ProtDistCalc.hpp  XmlInputStream.cpp  XmlInputStream.hpp  XmlOutputStream.cpp  XmlOutputStream.hpp  main.cpp
src/c++/programs/fastprot_mpi/: BinaryDmOutputStream.cpp  BinaryDmOutputStream.hpp  DataInputStream.hpp  DataOutputStream.hpp  ExpectedDistance.hpp  FastaInputStream.hpp  Matrix.cpp  MaximumLikelihood.cpp  ModelMatrix.cpp  ModelMatrix.hpp  PhylipDmOutputStream.cpp  PhylipMaInputStream.cpp  PhylipMaInputStream.hpp  ProtDistCalc.cpp  ProtDistCalc.hpp  ProtSeqUtils.hpp  XmlInputStream.cpp  XmlInputStream.hpp  XmlOutputStream.cpp  XmlOutputStream.hpp  main.cpp  prot.rng
src/c++/programs/fnj/: BinaryInputStream.cpp  BinaryInputStream.hpp  DataInputStream.cpp  DataInputStream.hpp  DataOutputStream.cpp  DataOutputStream.hpp  PhylipDmInputStream.cpp  PhylipDmInputStream.hpp  TreeTextOutputStream.hpp  XmlInputStream.cpp  XmlInputStream.hpp  XmlOutputStream.cpp  XmlOutputStream.hpp  fnj.cpp  main.cpp
src/c++/sequence_based_tree_reconstruction/: SequenceBasedNJ.cpp
src/c++/sequence_likelihood/: DistanceMethodMatrix.hpp  Kimura2parameter.cpp  LikelihoodMatrix.hpp  ambiguity_nucleotide.cpp  ambiguity_nucleotide.hpp  dna_pairwise_sequence_likelihood.hpp  string_compare.cpp
src/c++/simulated_phylogenies/: BootstrapStats.cpp  BootstrapTest.cpp  compare_nj_results.cpp  generate_phylogenies.cpp
src/docbook/: CMakeLists.txt  index.xml.cmake  params.xsl
src/docbook/commands/: cat_protein_seq_phylip  cat_seq_phylip_multialignment  cat_seq_xml  connecting_fnj_to_fastdist_with_a_pipe1  connecting_fnj_to_fastdist_with_a_pipe2  connecting_fnj_to_fastprot_with_a_pipe1  fastdist_lxml  fastdist_seq.fasta  fastdist_seq.phylip  fastdist_seq_seqfile  fastdist_seq_small_seqfile  fastprot_seq.fasta  fastprot_seq.phylip  fastprot_xml_stdin_xml_output  fnj_dm.phylip  fnj_dm.phylip_dm  fnj_dm.xml  fnj_print_relaxng_input
src/docbook/example_files/: dm.phylip_dm  dm.xml  fnj_lxml.py  protein_seq.phylip  protein_seq.xml  seq-small.xml  seq.xml
trunk/src/c++/: BitVector.cpp  BitVector.hpp  CMakeLists.txt  DistanceMatrix.cpp  DistanceMatrix_impl.hpp  DistanceRow.cpp  DistanceRow_impl.hpp  Exception.cpp  FloatDistanceMatrix_impl.hpp  InitAndPrintOn_utils.cpp  Makefile.fromIsaac  Newick.cpp  Object.cpp  Sequence.cpp  Sequence.hpp  SequenceTree.cpp  SequenceTree.hpp  SequenceTree_MostParsimonious.cpp  Simulator.cpp  Tree.hpp  Tree_impl.hpp  arg_utils.h  arg_utils_ext.cpp  arg_utils_ext.hpp  build_libxml2.sh  build_zlib.sh  fileFormatSchema.hpp  file_utils.hpp  license-win32-statically-built  nucleotide.hpp  script.nsi.cmake  stl_utils.cpp  stl_utils.hpp  xml_output_global.hpp
trunk/src/c++/DNA_b128/: DNA_b128_String.cpp  Sequences2DistanceMatrix.cpp  Sequences2DistanceMatrix.hpp  computeDistance_DNA_b128_String.cpp  new_comp.cpp  sse2_wrapper.h
trunk/src/c++/aml/: AML_local_improve.cpp  AML_local_improve.hpp  AML_star.hpp  Big_AML.hpp
trunk/src/c++/code_tests/: AML_star_test.cpp  Big_AML_test.cpp  DNA_b128_String_test.cpp  DistanceMatrix_test.cpp  LeastSquaresFit_test.cpp  Tree_test.cpp
trunk/src/c++/distance_methods/: LeastSquaresFit.hpp  NeighborJoining.hpp
trunk/src/c++/example_files/: 5species13chars.seqfile.xml  5species15charswithgaps.seqfile
trunk/src/c++/generating_block_transfer_data/: Generate_sequence_data.cpp
trunk/src/c++/iterative_tree_merger/: FNJ_collapse_method.cpp  Makefile  buggy_iterative_fnj_merge.cpp
trunk/src/c++/programs/: Clustal2gaplessPhylip.cpp  CreateSimulatedData.cpp  aml_tree.cpp  fastdist.cpp  naivedist.cpp  sequence_nj.cpp
trunk/src/c++/sequence_based_tree_reconstruction/: SequenceBasedNJ.hpp
trunk/src/c++/sequence_likelihood/: LikelihoodMatrix.hpp  TamuraNei.cpp  ambiguity_nucleotide.hpp  dna_pairwise_sequence_likelihood.cpp  string_compare.hpp
trunk/src/c++/simulated_phylogenies/: CreateTestCases.cpp  CreateTestCases_withBeepAndSeqGen.cpp  (+3 more)
(+129 files in other folders)
