IF(BUILD_DOCBOOK)
  FIND_PROGRAM(XMLTO xmlto)
  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/index.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/index.xml)
 GET_TARGET_PROPERTY(EDMONDS_ALG_EXE fastphylo LOCATION)

ADD_CUSTOM_TARGET(docbook-doc ALL ${XMLTO} --skip-validation -m ${CMAKE_CURRENT_SOURCE_DIR}/params.xsl xhtml-nochunks -o ${CMAKE_CURRENT_BINARY_DIR}  ${CMAKE_CURRENT_BINARY_DIR}/index.xml  )
  INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/style DESTINATION share/doc/fastphylo PATTERN ".svn" EXCLUDE )
  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/index.html DESTINATION share/doc/fastphylo )
ENDIF(BUILD_DOCBOOK)
